testCases/validTests/test2.cy
// Tests excessive whitespace (spaces, tabs, and newlines) in %hook, %end, and function definitions


     		%hook NSObject

function



     testing  



(     )    {
	
	
	
	printf("testing\n")
	
	
}

			  %end